--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p>test</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Компьютеры</title>
+        <h1>"Как не взорвать свой компьютер"</h1>
+    </head>
+    <body>
+        
+    </body>
+</html>
