--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <h1>"Как не взорвать свой компьютер"</h1>
     </head>
     <body>
-        
+        <p>Компы лагают. Иногда сильно. Если "сильно" чаще чем просто "лагает", то, возможно, вам стоит обновить свой пк. Здесь я напишу про некоторые комплектующие, на которые стоит обрать внимание.</p>
     </body>
 </html>
