--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <p>Компы лагают. Иногда сильно. Если "сильно" чаще чем просто "лагает", то, возможно, вам стоит обновить свой пк. Здесь я напишу про некоторые комплектующие, на которые стоит обрать внимание.</p>
+        <img src="imgs/DoomFire.jpg">
+
+        <h2>Центральный процессор (ЦП)</h2>
+        
     </body>
 </html>
