--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <p>Компы лагают. Иногда сильно. Если "сильно" чаще чем просто "лагает", то, возможно, вам стоит обновить свой пк. Здесь я напишу про некоторые комплектующие, на которые стоит обрать внимание.</p>
-        <img src="imgs/DoomFire.jpg">
+        <img src="imgs/DoomFire.jpg" height="80">
 
         <h2>Центральный процессор (ЦП)</h2>
-        
+        <p>ЦП - ядро компютера. Оно проводит все операции. Если у вас стоит ЦП 2005 года, то и компьютер будет 2005 года. Важно обновлять ЦП вовремя.</p>
+        <img src="imgs/proccessor.jpeg">
     </body>
 </html>
