--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Компьютеры</title>
         <h1>"Как не взорвать свой компьютер"</h1>
     </head>
     <body>
         <p>Компы лагают. Иногда сильно. Если "сильно" чаще чем просто "лагает", то, возможно, вам стоит обновить свой пк. Здесь я напишу про некоторые комплектующие, на которые стоит обрать внимание.</p>
-        <img src="imgs/DoomFire.jpg" height="80">
+        <img src="imgs/DoomFire.jpg">
 
         <h2>Центральный процессор (ЦП)</h2>
         <p>ЦП - ядро компютера. Оно проводит все операции. Если у вас стоит ЦП 2005 года, то и компьютер будет 2005 года. Важно обновлять ЦП вовремя.</p>
