--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     </head>
     <body>
         <h2>Центральный процессор (ЦП)</h2>
-        <p>ЦП - ядро компютера. Оно проводит все операции. Если у вас стоит ЦП 2005 года, то и компьютер будет 2005 года. Важно обновлять ЦП вовремя. Сайт корпорации intel: <a href="https://www.intel.com/content/www/us/en/support/ru-banner-inside.html">тык</a></p>
+        <p>ЦП - ядро компютера. Оно проводит все операции. Если у вас стоит ЦП 2005 года, то и компьютер будет 2005 года. Важно обновлять ЦП вовремя. Сайт intel: <a href="https://www.intel.com/content/www/us/en/support/ru-banner-inside.html">тык</a></p>
         <img src="imgs/proccessor.jpeg">
 
-        <h2>Оперативная память. </h2>
+        <h2>Оперативная память (ОЗУ)</h2>
+        <p>Слегка менее важный компонент, но всё ещё важный. Он ответственен за кратковременное хранение данных. Сайт Kingston: <a href="https://www.kingston.com/ru">тык</a></p>
+
+        <h2>Жесткий диск (HDD)</h2>
+        <p>Это устройство долговременного хранения информации. На данный момент HDD стремительно устаривает, и ему на смену приходит твердотельный накопитель.</p>
+
+        <h2>Твердотельный накопитель (SSD)</h2>
+        <p>Это устройство долговременного хранения информации. SSD - относительно новая технология, стремительно набирающая популярность. Сайт Kingston: <a href="https://www.kingston.com/ru">тык</a></p>
     </body>
 </html>
