--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
 
         <h2>Оперативная память (ОЗУ)</h2>
         <p>Слегка менее важный компонент, но всё ещё важный. Он ответственен за кратковременное хранение данных. Сайт Kingston: <a href="https://www.kingston.com/ru">тык</a></p>
+        <img src="imgs/memory.jpg">
 
         <h2>Жесткий диск (HDD)</h2>
         <p>Это устройство долговременного хранения информации. На данный момент HDD стремительно устаривает, и ему на смену приходит твердотельный накопитель.</p>
+        <img src="imgs/hdd.jpg">
 
         <h2>Твердотельный накопитель (SSD)</h2>
         <p>Это устройство долговременного хранения информации. SSD - относительно новая технология, стремительно набирающая популярность. Сайт Kingston: <a href="https://www.kingston.com/ru">тык</a></p>
+        <img src="imgs/ssd.jpg">
     </body>
+    <footer>
+        <p>Надеюсь сей блог поможет вам не взорвать свой компьютер. А я пойду напишу статью о том, как не ослепить своих читателей странными дизайнерскими решениями.</p>
+        <img src="imgs/CompFire.jpg">
+    </footer>
 </html>
