--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="imgs/memory.jpg">
 
         <h2>Жесткий диск (HDD)</h2>
-        <p>Это устройство долговременного хранения информации. На данный момент HDD стремительно устаривает, и ему на смену приходит твердотельный накопитель.</p>
+        <p>Это устройство долговременного хранения информации. На данный момент HDD стремительно устаревает, и ему на смену приходит твердотельный накопитель.</p>
         <img src="imgs/hdd.jpg">
 
         <h2>Твердотельный накопитель (SSD)</h2>
