--- a/index.html
+++ b/index.html
@@ -3,29 +3,52 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Компьютеры</title>
-        <h1>"Как не взорвать свой компьютер"</h1>
-        <p>Компы лагают. Иногда сильно. Если "сильно" чаще чем просто "лагает", то, возможно, вам стоит обновить свой пк. Здесь я напишу про некоторые комплектующие, на которые стоит обрать внимание.</p>
-        <img src="imgs/DoomFire.jpg">
     </head>
     <body>
-        <h2>Центральный процессор (ЦП)</h2>
-        <p>ЦП - ядро компютера. Оно проводит все операции. Если у вас стоит ЦП 2005 года, то и компьютер будет 2005 года. Важно обновлять ЦП вовремя. Сайт intel: <a href="https://www.intel.com/content/www/us/en/support/ru-banner-inside.html">тык</a></p>
-        <img src="imgs/proccessor.jpeg">
+        <center>
+            <table width="1000">
+                <tr>
+                    <td>
+                        <div class="intro">
+                            <h1>"Как не взорвать свой компьютер"</h1>
+                            <p>Компы лагают. Иногда сильно. Если "сильно" чаще чем просто "лагает", то, возможно, вам стоит обновить свой пк. Здесь я напишу про некоторые комплектующие, на которые стоит обрать внимание.</p>
+                            <div class="img">
+                                <img src="imgs/DoomFire.jpg">
+                            </div>
+                        </div>
 
-        <h2>Оперативная память (ОЗУ)</h2>
-        <p>Слегка менее важный компонент, но всё ещё важный. Он ответственен за кратковременное хранение данных. Сайт Kingston: <a href="https://www.kingston.com/ru">тык</a></p>
-        <img src="imgs/memory.jpg">
+                        <h2>Центральный процессор (ЦП)</h2>
+                        <p>ЦП - ядро компютера. Оно проводит все операции. Если у вас стоит ЦП 2005 года, то и компьютер будет 2005 года. Важно обновлять ЦП вовремя. Сайт intel: <a href="https://www.intel.com">тык</a></p>
+                        <div class="img">
+                            <img src="imgs/proccessor.jpeg">
+                        </div>
 
-        <h2>Жесткий диск (HDD)</h2>
-        <p>Это устройство долговременного хранения информации. На данный момент HDD стремительно устаревает, и ему на смену приходит твердотельный накопитель.</p>
-        <img src="imgs/hdd.jpg">
+                        <h2>Оперативная память (ОЗУ)</h2>
+                        <p>Слегка менее важный компонент, но всё ещё важный. Он ответственен за кратковременное хранение данных. Сайт Kingston: <a href="https://www.kingston.com/ru">тык</a></p>
+                        <div class="img">
+                            <img src="imgs/memory.jpg">
+                        </div>
 
-        <h2>Твердотельный накопитель (SSD)</h2>
-        <p>Это устройство долговременного хранения информации. SSD - относительно новая технология, стремительно набирающая популярность. Сайт Kingston: <a href="https://www.kingston.com/ru">тык</a></p>
-        <img src="imgs/ssd.jpg">
-    </body>
-    <footer>
-        <p>Надеюсь сей блог поможет вам не взорвать свой компьютер. А я пойду напишу статью о том, как не ослепить своих читателей странными дизайнерскими решениями.</p>
-        <img src="imgs/CompFire.jpg">
+                        <h2>Жесткий диск (HDD)</h2>
+                        <p>Это устройство долговременного хранения информации. На данный момент HDD стремительно устаревает, и ему на смену приходит твердотельный накопитель.</p>
+                        <div class="img">
+                            <img src="imgs/hdd.jpg">
+                        </div>
+
+                        <h2>Твердотельный накопитель (SSD)</h2>
+                        <p>Это устройство долговременного хранения информации. SSD - относительно новая технология, стремительно набирающая популярность. Сайт Kingston: <a href="https://www.kingston.com/ru">тык</a></p>
+                        <div class="img">
+                            <img src="imgs/ssd.jpg">
+                        </div>
+                    </body>
+                    <footer>
+                        <p>Надеюсь сей блог поможет вам не взорвать свой компьютер. А я пойду напишу статью о том, как не ослепить своих читателей странными дизайнерскими решениями.</p>
+                        <div class="img">
+                            <img src="imgs/CompFire.jpg">
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </center>
     </footer>
 </html>
