--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     <td>
                         <div class="intro">
                             <h1>"Как не взорвать свой компьютер"</h1>
-                            <p>Компы лагают. Иногда сильно. Если "сильно" чаще чем просто "лагает", то, возможно, вам стоит обновить свой пк. Здесь я напишу про некоторые комплектующие, на которые стоит обрать внимание.</p>
+                            <p>Компы лагают. Иногда сильно. Если "сильно" чаще, чем просто "лагает", то, возможно, вам стоит обновить свой пк. Здесь я напишу про некоторые комплектующие, на которые стоит обратить внимание.</p>
                             <div class="img">
                                 <img src="imgs/DoomFire.jpg">
                             </div>
@@ -42,7 +42,7 @@
                         </div>
                     </body>
                     <footer>
-                        <p>Надеюсь сей блог поможет вам не взорвать свой компьютер. А я пойду напишу статью о том, как не ослепить своих читателей странными дизайнерскими решениями.</p>
+                        <p>Надеюсь, сей блог поможет вам не взорвать свой компьютер. А я пойду напишу статью о том, как не ослепить своих читателей странными дизайнерскими решениями.</p>
                         <div class="img">
                             <img src="imgs/CompFire.jpg">
                         </div>
